--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import-normalize; /* bring in normalize.css styles */
 
 @import-normalize; /* bring in normalize.css styles */
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 * {
   box-sizing: border-box;
@@ -43,4 +44,13 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #a8b3a8;
 }
