--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   ;
+  font-size: 18px;
 }
 
 code {
@@ -52,5 +53,5 @@ a {
 }
 
 a:hover {
-  color: #a8b3a8;
+  color: #0dcaf0;
 }
